[tool.poetry]
name = "annealing"
version = "0.1.0"
description = ""
authors = ["Nikita Vilunov <nikita@vilunov.me>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
torch = "^1.4"
pandas = "^0.25.3"
scikit-learn = "^0.22.1"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
